--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@types/multer": "^1.4.7",
     "express": "^4.17.2",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "scripts": {
