--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/multer": "^1.4.7",
+    "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
     "uuid": "^8.3.2"
