--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
+    "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
   "scripts": {
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "eslint": "7.32.0",
