--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,31 @@
-version: "3.7"
+version: "3.9"
 
 services:
+  database_rentx:
+    image: postgres
+    container_name: database_ignite
+    restart: always
+    ports:
+      - 5432:5432
+    environment:
+      - POSTGRES_USER=docker
+      - POSTGRES_PASSWORD=ignite
+      - POSTGRES_DB=rentx
+    volumes:
+      - pgdata:/data/postgres
+  
   app:
     build: .
     container_name: rentx
     ports:
-      - 3333:3333
+      - 3001:3001
     volumes:
       - .:/usr/app
+    links:
+      - database_rentx
+    depends_on: 
+      - database_rentx
+  
+volumes:
+  pgdata:
+    driver: local
